Fixed bug when using binary operations

--- a/Lambda_ser.ipynb
+++ b/Lambda_ser.ipynb
@@ -37,7 +37,10 @@
     "            if i.opname == 'CALL_FUNCTION':\n",
     "                if bg[l-i.arg].opname == 'CALL_FUNCTION':\n",
     "                    continue\n",
-    "                fn = bg[l-i.arg-1].argval                \n",
+    "                if 'BINARY' in bg[l-i.arg].opname:\n",
+    "                    fn = bg[l-i.arg-3].argval\n",
+    "                else:\n",
+    "                    fn = bg[l-i.arg-1].argval                \n",
     "                rv.extend(fn)\n",
     "                fobj = eval(fn)\n",
     "                if fobj.__module__==dummyfun.__module__:\n",
@@ -80,7 +83,21 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['f = lambda x: x/2\\n',\n",
+       " 'g = lambda x: f(x)\\n',\n",
+       " 'h = lambda x,y: g(x)\\n',\n",
+       " 'j= lambda x, y: min(h(x, y), y)\\n']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "st"
    ]
@@ -201,6 +218,28 @@
    ],
    "source": [
     "j(4, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['m = lambda x : 1\\n', 'n = lambda x : m(x+1)\\n']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = lambda x : 1\n",
+    "n = lambda x : m(x+1)\n",
+    "prepare_func_for_serialization(n)"
    ]
   }
  ],
