Now works with many nested binary ops

--- a/Lambda_ser.ipynb
+++ b/Lambda_ser.ipynb
@@ -38,10 +38,14 @@
     "                if bg[l-i.arg].opname == 'CALL_FUNCTION':\n",
     "                    continue\n",
     "                if 'BINARY' in bg[l-i.arg].opname:\n",
-    "                    fn = bg[l-i.arg-3].argval\n",
+    "                    c = 2\n",
+    "                    fn = bg[l-i.arg-c-1].argval\n",
+    "                    while 'BINARY' in bg[l-i.arg-c].opname:\n",
+    "                        c += 2\n",
+    "                        fn = bg[l-i.arg-1-c].argval\n",
     "                else:\n",
-    "                    fn = bg[l-i.arg-1].argval                \n",
-    "                rv.extend(fn)\n",
+    "                    fn = bg[l-i.arg-1].argval    \n",
+    "                rv.extend([fn])\n",
     "                fobj = eval(fn)\n",
     "                if fobj.__module__==dummyfun.__module__:\n",
     "                    gfc = get_functions_called(eval(fn))\n",
@@ -228,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "['m = lambda x : 1\\n', 'n = lambda x : m(x+1)\\n']"
+       "['m = lambda x : 1\\n', 'n = lambda x : m(x**2)\\n']"
       ]
      },
      "execution_count": 13,
@@ -238,8 +242,28 @@
    ],
    "source": [
     "m = lambda x : 1\n",
-    "n = lambda x : m(x+1)\n",
+    "n = lambda x : m(x**2)\n",
     "prepare_func_for_serialization(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['m = lambda x : 1\\n', 'prepare_func_for_serialization(lambda k: m(k+2+3))\\n']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare_func_for_serialization(lambda k: m(k+2+3))"
    ]
   }
  ],
